# MEGEngine

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  engineSettings.ini
engine/ext/GLAD/: glad.h
engine/inc/: MEGEngine.h  app.h  application.h  camera.h  common.h  ebo.h  entity.h  material.h  mesh.h  mesh_renderer.h  model.h  model_loader.h  primitive_shapes.h  renderer.h  scene.h  settings.h  shader.h  shader_manager.h  shader_priv.h  texture.h  timer.h  transform.h  vao.h  vbo.h  vertex.h  window.h
engine/inc/MEGEngine/: Math.h  application.h  camera.h  colour.h  common.h  ebo.h  engine.cpp  engine.h  entity.h  event_manager.h  events.h  input.h  light.h  material.h  mesh.h  mesh_renderer.h  model_loader.h  primitive_shapes.h  renderer.h  scene.h  settings.h  shader.h  shader_manager.h  texture.h  timer.h  transform.h  vao.h  vbo.h  vertex.h  window.h
engine/inc/MEGEngine/input/: glfw_key_translator.h  input_action.cpp  input_action.h  input_context.cpp  input_context.h  input_device.cpp  input_device.h  input_events.h  input_manager.cpp  input_manager.h  input_mapping.cpp  input_mapping.h  input_shared_types.h  input_system.cpp  input_system.h  player_action_bus.cpp  player_action_bus.h  raw_input_event_bus.cpp  raw_input_event_bus.h
engine/inc/MEGEngine/math/: glm_conversions.h  mat4.cpp  mat4.h  quat.cpp  quat.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
engine/inc/MEGEngine/utils/: log.cpp  log.h
engine/inc/math/: glm_conversions.h  mat4.cpp  mat4.h  quat.cpp  quat.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
engine/inc/utils/: log.cpp  log.h
engine/resources/models/scroll/: scroll.gltf
engine/resources/models/sword/: sword.gltf
engine/resources/shaders/: default.vert  light.frag
engine/resources/shaders/defaultLit/: defaultLit.frag  defaultLit.vert
engine/resources/shaders/light/: light.frag  light.vert
engine/src/: app.cpp  application.cpp  camera.cpp  ebo.cpp  entity.cpp  event_manager.cpp  events.cpp  input.cpp  light.cpp  material.cpp  mesh.cpp  mesh_renderer.cpp  model.cpp  model_loader.cpp  primitive_shapes.cpp  renderer.cpp  scene.cpp  settings.cpp  shader.cpp  shader_manager.cpp  texture.cpp  timer.cpp  transform.cpp  vao.cpp  vbo.cpp  window.cpp
game/: CMakeLists.txt
game/src/: CustomEvents.h  main.cpp
